# Complex-mediated_evasion_systems_biology_approach

./: README.md
ABM/coreABM/: .gitignore  CMakeLists.txt  LICENSE  README.md  config.json
ABM/coreABM/configurations/basicConfigs/basicConfig/: analyser-config.json  frontend-api.json  simulator-config.json  visualisation-config.json
ABM/coreABM/configurations/basicConfigs/basicConfigCME/: analyser-config.json  input-config.json  simulator-config.json  visualisation-config.json
ABM/coreABM/configurations/basicConfigs/basicConfigExample/: simulator-config.json
ABM/coreABM/configurations/testConfigs/testSimulator/: input-config.json  simulator-config.json
ABM/coreABM/configurations/testConfigs/testSimulatorCME/: analyser-config.json  input-config.json  simulator-config.json  visualisation-config.json
ABM/coreABM/src/: CMakeLists.txt  create-new-simulator.sh  main.cpp
ABM/coreABM/src/apps/CME/: AnalyserCME.cpp  AnalyserCME.h  CMakeLists.txt  CuboidSiteCME.cpp  CuboidSiteCME.h  InSituMeasurementsCME.cpp  InSituMeasurementsCME.h  SimulatorCME.cpp  SimulatorCME.h  io_utilsCME.cpp  io_utilsCME.h
ABM/coreABM/src/apps/CME/Rate/: ConcentrationDependentRate.cpp  ConcentrationDependentRate.h
ABM/coreABM/src/apps/CME/cells/: Amp.cpp  Amp.h  Complex.cpp  Complex.h  Defensive.cpp  Defensive.h  Drug.cpp  Drug.h  Pathogenic_cell.cpp  Pathogenic_cell.h
ABM/coreABM/src/apps/CME/factories/: CellFactoryCME.cpp  CellFactoryCME.h  InteractionFactoryCME.cpp  InteractionFactoryCME.h  InteractionStateFactoryCME.cpp  InteractionStateFactoryCME.h  RateFactoryCME.cpp  RateFactoryCME.h
ABM/coreABM/src/apps/CME/interaction/: ComplexExtensionInteraction.cpp  ComplexExtensionInteraction.h  ComplexFormationInteraction.cpp  ComplexFormationInteraction.h  UptakeInteraction.cpp  UptakeInteraction.h
ABM/coreABM/src/apps/CME/interactiontypes/: ComplexExtension.cpp  ComplexExtension.h  ComplexFormation.cpp  ComplexFormation.h  Uptake.cpp  Uptake.h
ABM/coreABM/src/apps/CME/python_scripts/: graphs_post_processing.py  output_graphs.py  ovito_preprocessing.py
ABM/coreABM/src/apps/example/: AnalyserExample.cpp  AnalyserExample.h  CMakeLists.txt  CellFactoryExample.cpp  CellFactoryExample.h  CuboidSiteExample.cpp  CuboidSiteExample.h  FungalCellExample.cpp  FungalCellExample.h  InSituMeasurementsExample.cpp  InSituMeasurementsExample.h  SimulatorExample.cpp  SimulatorExample.h  io_utils_example.cpp  io_utils_example.h
ABM/coreABM/src/core/: CMakeLists.txt
ABM/coreABM/src/core/analyser/: Analyser.cpp  Analyser.h  CMakeLists.txt  InSituMeasurements.cpp  InSituMeasurements.h  histogram_measurement.cpp  histogram_measurment.h  pair_measurement.h  pair_measurment.cpp
ABM/coreABM/src/core/basic/: CMakeLists.txt  ColorRGB.cpp  ColorRGB.h  Coordinate3D.cpp  Coordinate3D.h  InversionSampler.cpp  InversionSampler.h  Randomizer.cpp  Randomizer.h  Sampler.cpp  Sampler.h  SphericCoordinate3D.cpp  SphericCoordinate3D.h
ABM/coreABM/src/core/simulation/: Agent.cpp  Agent.h  AgentManager.cpp  AgentManager.h  CMakeLists.txt  Cell.cpp  Cell.h  Condition.cpp  Condition.h  Interaction.cpp  Interaction.h  Interactions.cpp  Interactions.h  Simulator.cpp  Simulator.h  Site.cpp  Site.h
ABM/coreABM/src/core/simulation/boundary-condition/: AbsorbingBoundaries.cpp  AbsorbingBoundaries.h  AperiodicBoundaries.cpp  AperiodicBoundaries.h  PeriodicBoundaries.cpp  PeriodicBoundaries.h  ReflectingBoundaries.cpp  ReflectingBoundaries.h
ABM/coreABM/src/core/simulation/cells/: FungalCell.cpp  FungalCell.h  ImmuneCell.cpp  ImmuneCell.h
ABM/coreABM/src/core/simulation/cells/cellparts/: AssociatedCellparts.cpp  AssociatedCellparts.h
ABM/coreABM/src/core/simulation/cells/interaction/: AvoidanceInteraction.cpp  AvoidanceInteraction.h  IdenticalCellsInteraction.cpp  IdenticalCellsInteraction.h  InteractionEvent.cpp  InteractionEvent.h  NoInteraction.cpp  NoInteraction.h  PhagocyteFungusInteraction.cpp  PhagocyteFungusInteraction.h
ABM/coreABM/src/core/simulation/factories/: CellFactory.cpp  CellFactory.h  CellStateFactory.cpp  CellStateFactory.h  InteractionFactory.cpp  InteractionFactory.h  InteractionStateFactory.cpp  InteractionStateFactory.h  RateFactory.cpp  RateFactory.h
ABM/coreABM/src/core/simulation/interactiontypes/: Contacting.cpp  Contacting.h  Ingestion.cpp  Ingestion.h  InteractionType.cpp  InteractionType.h  RigidContacting.cpp  RigidContacting.h
ABM/coreABM/src/core/simulation/morphology/: Morphology.cpp  Morphology.h  MorphologyElement.cpp  MorphologyElement.h  SphereRepresentation.cpp  SphereRepresentation.h  SphericalMorphology.cpp  SphericalMorphology.h
ABM/coreABM/src/core/simulation/movement/: Movement.cpp  Movement.h  PersistentRandomWalk.cpp  PersistentRandomWalk.h  RandomWalk.cpp  RandomWalk.h
ABM/coreABM/src/core/simulation/neighbourhood/: BalloonListNHLocator.cpp  BalloonListNHLocator.h  BoundaryCondition.cpp  BoundaryCondition.h  Collision.cpp  Collision.h  NeighbourhoodLocator.cpp  NeighbourhoodLocator.h
ABM/coreABM/src/core/simulation/rates/: ConditionalRate.cpp  ConditionalRate.h  ConstantRate.cpp  ConstantRate.h  Rate.cpp  Rate.h
ABM/coreABM/src/core/simulation/site/: CuboidSite.cpp  CuboidSite.h
ABM/coreABM/src/core/simulation/states/: CellState.cpp  CellState.h  InteractionState.cpp  InteractionState.h
ABM/coreABM/src/core/utils/: CMakeLists.txt  io_util.cpp  io_util.h  macros.h  misc_util.cpp  misc_util.h  time_util.cpp  time_util.h
ABM/coreABM/src/core/visualisation/: CMakeLists.txt  PovFile.cpp  PovFile.h  PovRayObject.cpp  PovRayObject.h  Visualizer.cpp  Visualizer.h
ABM/coreABM/test/: CMakeLists.txt
ABM/coreABM/test/configurations/testSimulator/: config.json
ABM/coreABM/test/configurations/testSimulatorCME/: config.json
ABM/coreABM/test/configurations/testSimulatorExample/: config.json
ABM/coreABM/test/src/: testConfigurations.cpp  testConfigurations.h  testUnits.cpp  testUnits.h
Image_analysis/: LICENSE.txt  LL37 analysis.jip  LL37 cell death from tracks.Rmd  README.md  README.txt  calb_LL37_CP_preprocessed.zip.json  s1_F50.tif  s2_F50.tif
(+2 files in other folders)
