add_library(simulation SHARED
        Agent.cpp
        AgentManager.cpp
        cells/cellparts/AssociatedCellparts.cpp
        neighbourhood/BalloonListNHLocator.cpp
        neighbourhood/NeighbourhoodLocator.cpp
        Cell.cpp
        factories/CellFactory.cpp
        factories/CellStateFactory.cpp
        Condition.cpp
        Interaction.cpp
        cells/interaction/InteractionEvent.cpp
        factories/InteractionFactory.cpp
        Interactions.cpp
        states/InteractionState.cpp
        factories/InteractionStateFactory.cpp
        interactiontypes/InteractionType.cpp
        morphology/Morphology.cpp
        movement/Movement.cpp
        rates/Rate.cpp
        factories/RateFactory.cpp
        Simulator.cpp
        Site.cpp
        boundary-condition/AbsorbingBoundaries.cpp
        boundary-condition/ReflectingBoundaries.cpp
        boundary-condition/AperiodicBoundaries.cpp
        boundary-condition/PeriodicBoundaries.cpp
        cells/FungalCell.cpp
        states/CellState.cpp
        cells/ImmuneCell.cpp
        cells/interaction/AvoidanceInteraction.cpp
        cells/interaction/IdenticalCellsInteraction.cpp
        cells/interaction/NoInteraction.cpp
        cells/interaction/PhagocyteFungusInteraction.cpp
        interactiontypes/Contacting.cpp
        interactiontypes/Ingestion.cpp
        interactiontypes/RigidContacting.cpp
        morphology/MorphologyElement.cpp
        morphology/SphereRepresentation.cpp
        morphology/SphericalMorphology.cpp
        movement/PersistentRandomWalk.cpp
        movement/RandomWalk.cpp
        neighbourhood/BoundaryCondition.cpp
        neighbourhood/Collision.cpp
        rates/ConditionalRate.cpp
        rates/ConstantRate.cpp
        site/CuboidSite.cpp
        )
target_include_directories(simulation PRIVATE  ${PROJECT_SOURCE_DIR}/src)